// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Meta /> renders correctly with \`label\` prop 1`] = `
<div
  class="Meta TestMeta"
>
   
  <span
    class="Meta-label"
  >
    Test label:
  </span>
   
  <span
    class="Meta-value"
  >
    Meta value
  </span>
</div>
`;

exports[`[presentation] <Meta /> renders correctly with \`labelConstant\` prop 1`] = `
<div
  class="Meta TestMeta"
>
   
  <span
    class="Meta-label"
  >
    <span>
      Genre
    </span>
    :
  </span>
   
  <span
    class="Meta-value"
  >
    Meta value
  </span>
</div>
`;
